syntax = "proto3";

message WrapperDiceMessage{
    oneof msg {
        DiceUserSitDownReceive userSitDownReceive = 1;
        DiceUserSitDownSend userSitDownSend = 2;
        DiceUserItem userItem = 3;
        DiceUsersItem usersItem = 4;
        DiceApplyBankerReceive applyBankerReceive = 5;
        DiceApplyBankerSend applyBankerSend = 6;
        DiceCancelBanker cancelBanker = 7;
        DiceChangeBanker changeBanker = 8;
        DicePlaceBetFail placeBetFail = 9;
        DicePlaceBetReceive placeBetReceive = 10;
        DicePlaceAllBetSend PlaceAllBetSend = 11;
        DicePlaceBetSend placeBetSend = 12;
        DiceContinueBet continueBet = 13;
        DiceStatusChang StatusChang = 14;
        DiceGameStart gameStart = 15;
        DiceGameEnd gameEnd = 16;
        DicePlayScore PlayScore = 17;
        DiceRecordRoadString recordRoadString= 18;
        DiceUserStandUp userStandUp = 19;
        DiceUserStateChange userStateChange = 20;
        DiceTipsMessage tipsMessage = 21;
        DiceCheckSeated checkSeated = 22;
        DiceConfigurationInformation configurationInformation = 23;
    }
}

//坐下进入房间 （前端传给我）
message DiceUserSitDownReceive {
     int64 UserID = 1;          //用户ID
     int32 RoomId = 2;          //房间ID
}

//给前端
message DiceUserSitDownSend {
    DiceUserItem userItem = 1;
    DiceStatusChang StatusChang = 2;
    DiceChangeBanker changeBanker = 3;
    DiceRecordRoadString diceRecordRoadString = 4;
    DiceConfigurationInformation configurationInformation = 5;
    DiceUsersItem usersItem = 6;
    DiceGameEnd gameEnd = 7;
}

message DiceUserItem {
    int64 UserID = 1;          //用户ID
    string UserName = 2;       //用户昵称
    string UserProfile = 3;    //用户头像
    int64 UserGold = 4;        //用户金币
    int32 ChairID = 5;         //座位ID
}
//
message DiceUsersItem {
    repeated DiceUserItem userItem = 1; //用户信息
    int32 ListUserCount = 2;         //列表人数
}
//申请庄家 前端给我
message DiceApplyBankerReceive {
    int64 UserID = 1;          //申请用户ID
}

message DiceApplyBankerSend {
    repeated int32 ChairID = 1;     //申请上庄用户位置
    int32 ListApplyCount = 2;        //申请人数
}
message DiceCancelBanker {
    int64 CancelUser = 1;     //取消上庄用户位置
    int32 ListApplyCount = 2; //申请人数
}
//换庄
message DiceChangeBanker{
    int64 BankerUser = 1;    //当前庄家
    int64 BankerScore = 2;   //庄家分数
    int32 ListApplyCount = 3;//申请人数
    bool AndroidUser = 4 ;//机器标识
    int64 BankerID = 5;          //庄家ID
    string BankerName = 6;       //庄家昵称
    string BankerProfile = 7;    //庄家头像
}
//下注失败
message DicePlaceBetFail {
    int64 PlaceUse = 1;     //下注玩家
    int64 BetArea = 2;      //下注区域
    int64 PlaceScore = 3;   //当前下注
    int32 Tips = 4;        //提示信息
}
//下注 前端给我
message DicePlaceBetReceive {
    int32 ChairID = 1;     //用户位置
    int32 BetArea = 2;     //下注区域
    int64 BetScore = 3;    //加注数目
    int32 AndroidUser = 4 ;//机器标识
}

message DicePlaceAllBetSend{
    int64 AllBet = 1;      //总下注
    repeated int64 AreaAllBet = 2; //各区域总下注
}
message DicePlaceBetSend{
    int32 ChairID = 1;     //用户位置
    int64 UserGold = 2;    //用户金币
    int32 BetArea = 3;     //下注区域
    int64 BetScore = 4;    //加注数目
    int32 AndroidUser = 5 ;//机器标识
    int64 AllBet = 6;      //总下注
    repeated int64 AreaAllBet = 7; //各区域总下注
    repeated int64 AreaPlayBet = 8; //玩家各区域下注
}
//续注 前端给我
message DiceContinueBet{
    int32 ChairID = 1;         //座位ID
    repeated int64 AreaPlayBet = 2; //玩家各区域下注
    int64 AllBet = 3;      //总下注
    repeated int64 AreaAllBet = 4; //各区域总下注
}

//状态改变
message DiceStatusChang{
    int32 Status = 1;                     //具体状态
    int64 TimeBegin = 2;                  //当前时间
}

//游戏开始
message DiceGameStart
{
    int32 TimeLeave = 1;                  //剩余时间
    int32 BankerUser = 2;                 //庄家位置
    int64 BankerScore = 3;                //庄家金币
    int64 PlayBetScore = 4;                   //玩家最大下注
    int64 PlayFreeSocre = 5;               //玩家自由金币
    int32 ChipRobotCount = 6;               //人数上限 (下注机器人)
    int32 ListUserCount = 7;               //列表人数
    int32 AndriodCount = 8;                //机器人列表人数
}

//游戏结束
message DiceGameEnd
{
    int64 UserScore = 1;                        //玩家个人成绩
    //骰子信息
    repeated int32 TableDice = 2; //桌面骰子
    //庄家信息
    int64 BankerScore = 3;                  //庄家成绩
    int64 BankerTotallScore = 4;            //庄家总成绩
    int32 BankerTime = 5;                   //做庄次数
    //玩家成绩
    repeated DicePlayScore PlayScore= 6;     //每个玩家成绩
    int64 PlayAllScore = 7;                  //玩家总成绩
    //全局信息
    int64 Revenue = 8;                     //游戏税收
    repeated int64 WinArea = 9;           //各区域输赢
}
message DicePlayScore{
    int64 UserID = 1;          //用户ID
    int32 ChairID = 2;         //座位ID
    int64 PlayScore = 3;       //玩家成绩
    string UserName = 4;       //用户昵称
    string UserProfile = 5;    //用户头像
    int64 UserGold = 6;        //用户金币
}

message DiceRecordRoadString
{
    repeated string Record = 1;
}

//用户离开 前端发我
message DiceUserStandUp
{
    int32 ChairID = 1;         //座位ID
}
message DiceUserStateChange
{
    int64 UserID = 1;         //用户ID
    string UserName = 2;       //用户昵称
    int32 Tips = 3;         //提示信息 0用户重连 1 用户断线
}
message DiceTipsMessage
{
    int32 Tips = 1;         //提示信息
}
message DiceCheckSeated
{

}

message DiceConfigurationInformation
{
    int64 m_lApplyBankerCondition = 1;    //上庄条件
    int32 m_cbFreeTime = 2;               //空闲时间
    int32 m_cbBetTime = 3;                //下注时间
    int32 m_cbEndTime = 4;                //结束时间
}


/*
1.正在下注，无法退出，已为您自动申请下庄
2.你的金币不足以申请庄家，申请失败！
3.你已经申请了庄家，不需要再次申请！
4.游戏已经开始，不可以取消当庄！
5.分数少于 最小坐庄分数 强行换庄!"
6.做庄次数达到最大连庄数 强行换庄!"
7."恭喜"+UserName+"上庄"
8."由于你的金币数"+UserScore+"少于坐庄必须金币数"+m_lApplyBankerCondition+",你无法上庄！"
9 "现在状态为"+TestRoom.Status +"，不在下注时间"
10."您为庄家无法下注"
11."积分不足"
12."超过下注总量最大限制"
13."超过此区域可下注数量"
14.此用户已进入
15.积分未达到进入房间要求
16.连接超时
17.缓存出错
*/